# hedera-stark-recursive-proofs-poc

./: .gitignore  .gitmodules  Cargo.toml
contracts/: CommitmentVerification.sol
methods/: Cargo.toml
methods/examples/: receipt.json
methods/guest/src/: main.rs
methods/src/: cli.rs  lib.rs  main.rs
risc0-example/: Cargo.toml  README.md  foundry.toml
risc0-example/contracts/: CommitmentVerification.sol  ImageID.sol
risc0-example/methods/: Cargo.toml
risc0-example/methods/guest/: Cargo.toml
risc0-example/methods/src/: cli.rs  main.rs
risc0-example/script/: Deploy.s.sol
risc0-example/tests/: CommitmentVerification.t.sol  CommitmentVerificationDemo.t.sol  Elf.sol
script/: Deploy.s.sol
sp1-example/: README.md  foundry.toml
sp1-example/contracts/: SignatureVerification.sol
sp1-example/examples/: fixture.json
sp1-example/program/: Cargo.toml
sp1-example/program/elf/: riscv32im-succinct-zkvm-elf
sp1-example/program/src/: main.rs
sp1-example/script/: Cargo.toml  build.rs
sp1-example/script/src/: cli.rs  main.rs
sp1-example/tests/: SignatureVerification.t.sol
tests/: CommitmentVerification.t.sol  CommitmentVerificationDemo.t.sol
