[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true}

[dependencies]
anyhow = "1.0.86"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client", "prove"] }
ethers = { workspace = true }
hex = { workspace = true }
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.120"
risc0-ethereum-contracts = { workspace = true }
clap = { version = "4.0" }

[features]
cuda = ["risc0-zkvm/cuda"]
