[workspace]
[package]
version = "0.1.0"
name = "proofs"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sp1-zkvm = { version = "1.0.1", features = ["verify"] }
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = "0.10"
bincode = "1.3.3"
