[workspace]
[package]
version = "0.1.0"
name = "proofs-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/main.rs"

[dependencies]
sp1-sdk = "1.0.1"
sp1-prover = "1.0.1"
sp1-core = "1.0.1"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0" }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
hex = "0.4.3"
anyhow = "1.0.86"
alloy-primitives = "0.7.2"
ethers = "2.0.14"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-std = "0.4"
sha2 = "0.10"
bincode = "1.3.3"

[build-dependencies]
sp1-helper = "1.0.1"
